--- a/index.css
+++ b/index.css
@@ -23,7 +23,6 @@ body {
 
 #topleft {
     display: flex;
-
     width: 50%;
     height: 100%;
  
@@ -61,7 +60,7 @@ a{
 
 #apps{
    
-   margin-top: 8px;
+    margin-top: 8px;
 }
 
 .button{
@@ -72,6 +71,7 @@ a{
     width: 75px;
     height: 30px;
     font-family: Arial, Helvetica, sans-serif;
+    border-style: none;
 }
 
 
@@ -79,7 +79,6 @@ a{
 
 #logo img {
     display: flex;
-
     max-width:  100%;
     height:  auto;      
 }
@@ -145,21 +144,15 @@ a{
      display: flex;
      flex-direction: row;
      align-items: center;
-
-     position:fixed;
+    position:fixed;
      bottom:0;
-     background-color: rgb(238, 237, 237);
-     
-     
- 
+     background-color: rgb(238, 237, 237);   
  }
 
  #bottom_left {
     display: flex;
     width: 50%;
-    height: 100%;
-   
- 
+    height: 100%;  
 }
 #bottom_left ul, #bottom_right ul {
     display: flex;
